Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28483

MultiPointTouchArea not working on Mac touchpad

    XMLWordPrintable

Details

    • macOS

    Description

      MultiPointTouchArea appears to have stopped taking any touch events from my Macbook Air's touchpad. Running the attached QML works fine in the Beta1 and earlier, but since Beta2 none of the signals are emitted and the touch points are never updated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            kitizz Kit Ham
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes